--- a/client/style.css
+++ b/client/style.css
@@ -35,11 +35,13 @@ h3 {
   display: inline-block;
   text-align: center;
   margin-left: 30px;
+  border: 5px solid white;
 }
 
 .authButtons {
+  float: right;
   display: inline-block;
-  margin-left: 50px;
+  margin: 60px 190px 0px 0px ;
 }
 
 .circleText {
@@ -78,6 +80,7 @@ h3 {
   border-radius: 520px;
   background-color: #2E1E20;
   display: inline-block;
+  border: 5px solid white;
 }
 
 .circleStuff {
@@ -108,6 +111,7 @@ h3 {
   margin: 13px;
   border-radius: 10px;
   display: inline-block;
+  border: 5px solid white;
 }
 
 
