--- a/client/style.css
+++ b/client/style.css
@@ -41,7 +41,13 @@ h3 {
 .authButtons {
   float: right;
   display: inline-block;
-  margin: 60px 190px 0px 0px ;
+  margin: 60px 190px 0px 0px;
+}
+
+.authText {
+  letter-spacing: 2px;
+  font-size: 18pt;
+  padding-top: 15px;
 }
 
 .circleText {
@@ -176,12 +182,23 @@ h3 {
 }
 
 .reject {
-  background-color: grey;
+  background-color: #7F63A8;
   height: 40px;
   width:300px;
   margin-left: 100px;
   border-radius: 10px;
 
+}
+
+.logoutButton {
+
+  height: 100px;
+  width: 350px;
+  margin-right: 57px;
+  border-radius: 10px;
+  border: 5px solid white;
+  background-color: #7F63A8;
+  text-align: center;
 }
 
 #topSugg {
